--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,24 +11,21 @@
 	left: 50%;
 	width: 100%;
 
-	&__container {
-	}
-
 	&__wrap {
-		padding: 30px 0;
+		padding: rem(30) 0;
 	}
 
 	&__top {
 		font-family: 'Montserrat';
 		font-style: normal;
 		font-weight: 500;
-		font-size: 13px;
+		font-size: rem(13);
 		line-height: 150%;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		&:not(:last-child) {
-			margin-bottom: 20px;
+			margin-bottom: rem(20);
 		}
 	}
 
@@ -60,10 +57,10 @@
 		font-family: 'Montserrat';
 		font-style: normal;
 		font-weight: 400;
-		font-size: 14px;
+		font-size: rem(14);
 		line-height: 150%;
 		text-align: center;
-		padding: 13px 15px;
+		padding: rem(13) rem(15);
 		border-top: 1px solid #FFFFFF;
 		border-bottom: 1px solid #FFFFFF;
 		&:not(:last-child) {
@@ -76,6 +73,40 @@
 	}
 }
 
+@media(max-width: rem(469)) {
+	.header {
+		&__wrap {
+			padding: rem(15) 0;
+		}
+		&__top {
+			font-family: 'Montserrat';
+			font-style: normal;
+			font-weight: 500;
+			font-size: rem(10);
+			line-height: 150%;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			&:not(:last-child) {
+				margin-bottom: rem(12);
+			}
+		}
+	}
+	.menu {
+		&__list {
+			flex-wrap: wrap;
+		}
+		&__item {
+			flex: 1 1 50%;
+			&:not(:last-child) {
+				border-right: none;
+			}
+			&:nth-child(2n) {
+				border-left: 1px solid #FFFFFF;
+			}
+		}
+	}
+}
 
 //--------------------------------------------------------------------main-block-----------------------------------------------------
 
@@ -86,23 +117,25 @@
 	}
 
 	&__wrap {
-		padding: 700px 0 150px 0;
+		height: 100vh;
+		//min-height: rem(540);
+		padding-top: 77vh;
 	}
 
 	&__buttons {
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		gap: 30px;
+		gap: rem(30);
 	}
 
 	&__button {
 		background: #998431;
-		padding: 15px 30px;
+		padding: rem(15) rem(30);
 		font-family: 'Montserrat';
 		font-style: normal;
 		font-weight: 500;
-		font-size: 16px;
+		font-size: rem(16);
 		line-height: calc(20*100%/16);
 		text-align: center;
 		letter-spacing: 0.05em;
@@ -121,20 +154,32 @@
 	}
 }
 
+@media(max-width: rem(469)) {
+	.main-block {
+		&__wrap {
+			padding-top: 60vh;
+		}
+		&__buttons {
+			flex-direction: column;
+			gap: rem(15);
+		}
+	}
+}
+
 //--------------------------------------------------------------------description----------------------------------------------------
 
 .description {
 	background: #282828;
 
 	&__wrap {
-		padding: 100px 0;
+		padding: rem(100) 0;
 		color: #fff;
 		text-align: center;
 	}
 
 	&__body {
 		border: 3px solid #C4C4C4;
-		padding: 60px 30px;
+		padding: rem(60) rem(30);
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -142,16 +187,16 @@
 
 	&__title {
 		&:not(:last-child) {
-			margin-bottom: 40px;
+			margin-bottom: rem(40);
 		}
 	}
 
 	&__line {
-		width: 160px;
+		width: rem(160);
 		height: 1px;
 		background: #fff;
 		&:not(:last-child) {
-			margin-bottom: 40px;
+			margin-bottom: rem(40);
 		}
 	}
 
@@ -161,9 +206,9 @@
 		font-weight: 400;
 		font-size: rem(16);
 		line-height: 150%;
-		max-width: 733px;
+		max-width: rem(733);
 		&:not(:last-child) {
-			margin-bottom: 50px;
+			margin-bottom: rem(50);
 		}
 	}
 
@@ -183,6 +228,614 @@
 
 .title {
 	font-family: 'Playfair Display';
-	font-size: 36px;
+	font-size: rem(36);
 	line-height: 150%;
+}
+
+@media(max-width: rem(600)) {
+	.description {
+		&__wrap {
+			padding: rem(50) 0;
+		}
+		&__body {
+			padding: rem(30) rem(10);
+		}
+		&__title {
+			font-size: rem(24);
+			&:not(:last-child) {
+				margin-bottom: rem(25);
+			}
+		}
+	
+		&__line {
+			&:not(:last-child) {
+				margin-bottom: rem(25);
+			}
+		}
+	
+		&__text {
+			font-size: rem(14);
+			&:not(:last-child) {
+				margin-bottom: rem(50);
+			}
+		}
+	
+		&__img {
+			width: 160px;
+			height: 160px;
+			position: relative;
+			& > img {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+			}
+		}
+	}
+}
+@media(max-width: rem(425)) {
+	.description {
+		&__body {
+			border: none;
+			padding: 0 0;
+		}
+	}
+}
+
+//----------------------------------------------------------------------------harvest------------------------------------------------
+
+.page {
+
+	&__harvest {
+	}
+}
+.harvest {
+	background: #E6E3C4;
+
+	&__container {
+	}
+
+	&__wrap {
+		padding: rem(80) 0;
+	}
+
+	&__body {
+		width: 100%;
+		border-top: 1px solid #998431;
+		border-bottom: 1px solid #998431;
+		padding: rem(60) 0;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__text-block {
+		margin-right: rem(25);
+		max-width: rem(445);
+	}
+
+	&__subtitle {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(16);
+		line-height: 150%;
+		color: #000000;
+		margin-bottom: rem(30);
+	}
+
+	&__title {
+		position: relative;
+		font-family: 'Playfair Display';
+		font-size: rem(36);
+		line-height: 150%;
+		color: #282828;
+		font-weight: 600;
+		&::after {
+			position: relative;
+			display: block;
+			content: "";
+			background: #282828;
+			height: 1px;
+			width: 160px;
+			margin-top: rem(30);
+		}
+		&:not(:last-child) {
+			margin-bottom: rem(30);
+		}
+	}
+
+	&__text {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(14);
+		line-height: 150%;
+		color: #282828;
+		&:not(:last-child) {
+			margin-bottom: rem(30);
+		}
+	}
+
+	&__table {
+		&:not(:last-child) {
+			margin-bottom: rem(30);
+		}
+	}
+
+	&__button {
+		display: inline-block;
+		padding: rem(15) rem(30);
+		background: #998431;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 500;
+		font-size: rem(16);
+		line-height: calc(20*100%/16);
+		text-align: center;
+		letter-spacing: 0.05em;
+		text-transform: uppercase;
+		color: #FFFFFF;
+	}
+
+	&__image-block {
+		max-width: rem(540);
+	}
+}
+.table {
+
+	&__row {
+		display: flex;
+		align-items: center;
+		min-height: rem(76);
+		&:not(:last-child) {
+			border-bottom: 1px solid #282828;
+		}
+	}
+
+	&__date {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(14);
+		line-height: 150%;
+		color: #282828;
+		margin: 0 rem(19) 0 rem(24);
+	}
+
+	&__body {
+		height: 100%;
+		padding: rem(10) 0 0 rem(30);
+		&:not(:first-child) {
+			border-left: 1px solid #282828;
+		}
+	}
+
+	&__title {
+		font-family: 'Playfair Display';
+		font-size: rem(18);
+		line-height: 150%;
+		color: #282828;
+		font-weight: 600;
+		&:not(:last-child) {
+			margin-bottom: rem(5);
+		}
+	}
+
+	&__text {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(14);
+		line-height: 150%;
+		color: #282828;
+	}
+}
+.image {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: rem(30);
+
+	&__big {
+		grid-column-start: 1;
+		grid-column-end: 3;
+	}
+
+	&__little {
+	}
+}
+
+@media(max-width: rem(964)) {
+	.harvest {
+		&__body {
+			flex-direction: column;
+			gap: rem(30);
+		}
+		&__text-block {
+			max-width: 100%;
+			margin-right: 0;
+		}
+	}
+}
+
+@media(max-width: rem(550)) {
+	.harvest {
+		&__title {
+			font-size: rem(30);
+		}
+		&__image-block {
+			max-width: 100%;
+			width: 100%;
+		}
+	}
+	.image {
+		gap: rem(15);
+	
+		&__big {
+			object-fit: contain;
+			width: 100%;
+		}
+	
+		&__little {
+			object-fit: contain;
+			width: 100%;
+		}
+	}
+}
+
+//------------------------------------------------------------------------record------------------------------------------
+
+.page {
+
+	&__record {
+	}
+}
+.record {
+	background: #282828;
+
+	&__container {
+	}
+
+	&__wrap {
+		padding: rem(130) 0 rem(100) 0;
+	}
+
+	&__body {
+		position: relative;
+		padding: 0 rem(15) rem(80) rem(15);
+		border: 3px solid #C4C4C4;
+	}
+
+	&__img {
+		position: absolute;
+		width: rem(260);
+		&_left {
+			height: rem(260);
+			top: rem(-69);
+			left: rem(-45);
+		}
+		&_right {
+			height: rem(200);
+			top: rem(-65);
+			right: rem(-53);
+		}
+	}
+
+	&__title {
+		max-width: rem(540);
+		margin-left: auto;
+		margin-right: auto;
+		margin-top: -2.4375rem;
+		background: #282828;
+		position: relative;
+		padding: rem(10) rem(50);
+		font-family: 'Playfair Display';
+		font-size: rem(36);
+		line-height: 150%;
+		text-align: center;
+		color: #FFFFFF;
+		&::after {
+			position: relative;
+			display: block;
+			content: "";
+			margin-left: auto;
+			margin-right: auto;
+			background: #fff;
+			height: 1px;
+			width: 118px;
+			margin-top: rem(30);
+		}
+		&:not(:last-child) {
+			margin-bottom: rem(40);
+		}
+	}
+
+	&__text {
+		max-width: rem(540);
+		margin-left: auto;
+		margin-right: auto;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(16);
+		line-height: 150%;
+		text-align: center;
+		color: #FFFFFF;
+		&:not(:last-child) {
+			margin-bottom: rem(80);
+		}
+	}
+
+	&__form {
+		max-width: rem(540);
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	&__wrap {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		gap: rem(30);
+		&:not(:last-child) {
+			margin-bottom: rem(40);
+		}
+	}
+
+	& input {
+		width: 100%;
+		padding-bottom: rem(10);
+		background: #282828;
+		border-bottom: 1px solid #FFFFFF;
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 500;
+		font-size: rem(13);
+		line-height: 150%;
+		color: #FFFFFF;
+		&::-webkit-input-placeholder {
+			color:#fff;
+		}
+	}
+
+	&__adres {
+		&:not(:last-child) {
+			margin-bottom: rem(50);
+		}
+	}
+
+	&__button {
+		width: 100%;
+		padding: rem(15);
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 500;
+		font-size: rem(16);
+		line-height: calc(20*100%/16);
+		text-align: center;
+		letter-spacing: 0.05em;
+		text-transform: uppercase;
+		color: #FFFFFF;
+		border: 1px solid #FFFFFF;
+		background: #282828;
+	}
+}
+
+@media(max-width: rem(1010)) {
+	.record {
+		&__img {
+			width: rem(160);
+			&_left {
+				height: rem(160);
+				top: rem(-10);
+				left: rem(-10);
+			}
+			&_right {
+				height: rem(100);
+				top: rem(-10);
+				right: rem(-10);
+			}
+		}
+	}
+}
+@media(max-width: rem(880)) {
+	.record {
+		&__img {
+			display: none;
+		}
+		&__title {
+			display: inline-block;
+			transform: translateX(-50%);
+			margin-left: 50%;
+			padding: rem(10) rem(10);
+		}
+	}
+}
+@media(max-width: rem(560)) {
+	.record {
+		&__wrap {
+			padding: rem(50) 0 rem(40) 0;
+		}
+		&__body {
+			padding: 0 rem(15) rem(30) rem(15);
+		}	
+		&__title {
+			&::after {
+				margin-top: rem(15);
+			}
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+			}
+		}
+		&__text {
+			&:not(:last-child) {
+				margin-bottom: rem(30);
+			}
+		}
+	}
+	.form {
+	
+		&__wrap {
+			flex-direction: column;
+			gap: rem(20);
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+			}
+		}
+	
+		&__adres {
+			&:not(:last-child) {
+				margin-bottom: rem(20);
+			}
+		}
+	}
+}
+
+//-----------------------------------------------------------------------footer----------------------------------------
+
+.footer {
+	background: #998431;
+
+	&__container {
+	}
+
+	&__wrap {
+		padding: rem(50) 0;
+	}
+
+	&__top {
+		padding: rem(24) 0 rem(15) 0;
+		border-top: 1px solid #FFFFFF;
+		border-bottom: 1px solid #FFFFFF;
+	}
+
+	&__list {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		flex-wrap: wrap;
+		max-width: rem(922);
+		margin-left: auto;
+		margin-right: auto;
+		column-gap: rem(10);
+	}
+
+	&__item {
+	}
+
+	&__link {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 400;
+		font-size: rem(14);
+		line-height: 150%;
+		text-align: center;
+		color: #FFFFFF;
+	}
+
+	&__bottom {
+		border-bottom: 1px solid #FFFFFF;
+	}
+
+	&__bottom-wrap {
+		max-width: rem(922);
+		margin-left: auto;
+		margin-right: auto;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__text {
+		font-family: 'Montserrat';
+		font-style: normal;
+		font-weight: 600;
+		font-size: rem(14);
+		line-height: 150%;
+		text-align: center;
+		text-transform: uppercase;
+		color: #FFFFFF;
+		padding: rem(19) 0 rem(20) 0;
+	}
+
+	&__name {
+	}
+
+	&__phone {
+	}
+
+	&__social-network {
+	}
+
+	&__label {
+	}
+
+	&__line {
+		height: rem(59);
+		width: 1px;
+		background: #fff;
+	}
+}
+.social-network {
+
+	&__list {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		width: rem(146);
+		padding: rem(19) 0 rem(20) 0;
+	}
+
+	&__item {
+	}
+
+	&__img {
+	}
+}
+
+@media(max-width: rem(698)) {
+	.footer {
+		&__wrap {
+			padding: rem(30) 0;
+		}
+		&__top {
+			padding: rem(14) 0 rem(10) 0;
+		}
+		&__link {
+			font-size: rem(12);
+		}
+		&__text {
+			font-size: rem(12);
+			padding: rem(10) 0 rem(10) 0;
+		}
+		&__line {
+			height: rem(40);
+		}
+	}
+	.social-network {
+
+		&__list {
+			width: rem(80);
+			padding: rem(10) 0 rem(10) 0;
+		}
+	}
+}
+@media(max-width: rem(510)) {
+	.footer {
+		&__bottom-wrap {
+			justify-content: space-between;
+			flex-direction: column;
+		}
+		&__line {
+			display: none;
+		}
+	}
 }
